@@ -39,6 +39,17 @@ NATIVE LANGUAGE SUPPORT
 
         make clean install ENABLE_NLS=
 
+LARGE FILE SUPPORT
+
+    Large File Support (LFS) is by default enabled. This enables
+    the use of 64 bit file system interface on 32 bit systems.
+    This makes it possible to open files larger than 2GB on 32 bit
+    systems, provided the OS has LFS support builtin.
+    To disable LFS make the LFS variable empty. Example:
+
+        Disable LFS:
+        make clean install LFS=
+
 DOCUMENTATION
 
     Manual pages are generated from Perl POD files. By default
